actor age displayed in descneding order

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,17 +1,17 @@
 <h1> <%= @movie.title %> </h1>
 
-<p> <%=@movie.creation_year  %> </p>
-<p> <%=@movie.genre  %> </p>
+<p> Creation Year: <%=@movie.creation_year  %> </p>
+<p> Genre: <%=@movie.genre  %> </p>
 
 <h2>Actors</h2>
 
-<%@movie.actors.each do |actor| %>
+<%@movie.actors.order(age: :desc).each do |actor| %>
   <p> <%=actor.name %> </p>
 <% end %>
 <p> Average Age of Actors: <%=@movie.actors.average_age%> </p>
 
-<h2> Add an Actor</h2>
-<p>Enter Actors Name</p>
+<h3> Add an Actor</h3>
+<p>Enter Actor's Name</p>
 <%= form_tag("/movies/#{@movie.id}/actors", method: :post) do %>
   <%= label_tag :name %>
   <%= text_field_tag :name %><br/>
